# rl_sber

./: .gitignore  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt
docs/: index.html  search.js
docs/sberl/: recorder.html
sberl/: abstract.py  agent.py  environment.py  model.py  ppo.py  recorder.py  replayer.py  rl.py  trainer.py  utils.py
sberl/core/: dag.py
sberl/tests/: test_env.py  test_mocks.py  test_recorder.py
scripts/: play_raw.py  train_raw.py
scripts/archive/: play_raw_2.py  train_raw_2.py
scripts/configuration/: model.xml  path.py
scripts/practical_rl_models/: model_1500000.pth  model_1700000.pth  model_1900000.pth  model_3500000.pth  model_4800000.pth  model_4900000.pth  model_5000000.pth
